finished basic outline of pomolo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,7 +159,7 @@ h6 {
 	right: 15px;
 	bottom: 15px;
 	z-index: 996;
-	background: #cc5219;
+	background: #ffff;
 	width: 35px;
 	height: 35px;
 	border-radius: 50px;
@@ -168,14 +168,15 @@ h6 {
 
 .back-to-top i {
 	font-size: 28px;
-	color: #fff; /* the white arrow inside blue circle */
+	color: #000000; /* the white arrow inside blue circle */
 	line-height: 0;
 }
 
 .back-to-top:hover {
-	background: #000000;
+	background: #177add4d;
 	color: rgb(156, 34, 34);
 }
+
 
 .back-to-top.active {
 	visibility: visible;
@@ -488,7 +489,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover > a {
-	color: #1973cc;
+	color: #177add;
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -1067,7 +1068,7 @@ section {
 	left: 0;
 	top: 2px;
 	font-size: 20px;
-	color: #1973cc;
+	color: #177add;
 	line-height: 1;
 }
 
@@ -1127,7 +1128,7 @@ section {
 }
 
 .instagram-title:hover {
-	color: #4fa7ff;
+	color: #177add;
 }
 
 /* Three image containers (use 25% for four, and 50% for two, etc) */
@@ -1137,9 +1138,10 @@ section {
 	padding: 5px;
 	transition: 0.3s;
 }
-.column:hover {
+
+/* .column:hover {
 	color: #1c87ebb6;
-}
+} */
 
 /* Clear floats after image containers */
 .row::after {
@@ -1203,14 +1205,14 @@ section {
 	font-size: 21px;
 	font-weight: bold;
 	letter-spacing: 2px;
-	color: #1c87eb;
+	color: #177add;
 	transition: 0.3s;
 
 	/* color: #1563b1; */
 }
 
 .books-title:hover {
-	color: #4fa7ff;
+	color: #177add;
 }
 
 .books-middle {
@@ -1353,7 +1355,7 @@ section {
 }
 
 .services .icon-box:hover::before {
-	background: #1973cc;
+	background: #177add;
 	top: 0;
 	border-radius: 0px;
 }
@@ -1365,7 +1367,7 @@ section {
 .services .icon i {
 	font-size: 48px;
 	line-height: 1;
-	color: #1973cc;
+	color: #177add;
 	transition: all 0.3s ease-in-out;
 }
 
@@ -1429,7 +1431,7 @@ section {
 }
 
 .features .icon-box:hover a {
-	color: #1973cc;
+	color: #177add;
 }
 
 /*--------------------------------------------------------------
@@ -1507,7 +1509,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
 	color: rgb(77, 42, 42);
-	background: #1973cc;
+	background: #177add;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -1588,14 +1590,15 @@ section {
 }
 
 .portfolio .image_title {
-	font-size: 1.5em;
-	font-family: "Amiko", sans-serif;
+	font-size: 1.7em;
+	font-family: "Mukta",
+		sans-serif;
 	text-align: center;
 	font-weight: lighter;
-	letter-spacing: 1px;
-	font-weight: 600;
+	letter-spacing: 1.5px;
+	font-weight: 30;
 	color: #ffffff;
-	margin-top: 25px;
+
 }
 
 .portfolio h2 {
@@ -1744,14 +1747,14 @@ section {
 	height: 12px;
 	background-color: #fff;
 	opacity: 1;
-	border: 1px solid #1563b1;
+	border: 1px solid #177add;
 }
 
 .portfolio-details
 	.portfolio-details-slider
 	.swiper-pagination
 	.swiper-pagination-bullet-active {
-	background-color: #1563b1;
+	background-color: #177add;
 }
 
 .portfolio-details .portfolio-info {
@@ -1844,7 +1847,7 @@ section {
 
 .pricing .box h4 {
 	font-size: 42px;
-	color: #1563b1;
+	color: #177add;
 	font-weight: 500;
 	/* font-family: "Open Sans", sans-serif; */
 	font-family: "Inter", sans-serif;
@@ -1877,7 +1880,7 @@ section {
 }
 
 .pricing .box ul i {
-	color: #1563b1;
+	color: #177add;
 	font-size: 18px;
 	padding-right: 4px;
 }
@@ -1896,8 +1899,8 @@ section {
 	display: inline-block;
 	padding: 8px 40px 10px 40px;
 	border-radius: 50px;
-	border: 2px solid #1563b1;
-	color: #1563b1;
+	border: 2px solid #177add;
+	color: #177add;
 	font-size: 14px;
 	font-weight: 400;
 	/* font-family: "Nunito", sans-serif; */
@@ -1907,22 +1910,22 @@ section {
 }
 
 .pricing .box .btn-buy:hover {
-	background: #1563b1;
+	background: #177add;
 	color: #fff;
 }
 
 .pricing .recommended {
-	border-color: #1563b1;
+	border-color: #177add;
 }
 
 .pricing .recommended .btn-buy {
-	background: #1563b1;
+	background: #177add;
 	color: #fff;
 }
 
 .pricing .recommended .btn-buy:hover {
-	background: #1b76d1;
-	border-color: #1b76d1;
+	background: #177add;
+	border-color: #177add;
 }
 
 .pricing .recommended-badge {
@@ -1934,7 +1937,7 @@ section {
 	font-size: 13px;
 	padding: 3px 25px 6px 25px;
 	background: #fce6ea;
-	color: #1563b1;
+	color: #177add;
 	border-radius: 50px;
 }
 
@@ -1959,13 +1962,13 @@ section {
 .faq .faq-list .question {
 	display: block;
 	position: relative;
-	font-family: #1563b1;
+	font-family: #177add;
 	font-size: 18px;
 	line-height: 24px;
 	font-weight: 400;
 	padding-left: 25px;
 	cursor: pointer;
-	color: #1b76d1;
+	color: #177add;
 	transition: 0.3s;
 }
 
@@ -1990,7 +1993,7 @@ section {
 }
 
 .faq .faq-list .collapsed:hover {
-	color: #1563b1;
+	color: #177add;
 }
 
 .faq .faq-list .collapsed .icon-show {
@@ -2074,7 +2077,7 @@ section {
 }
 
 .team .member .social a:hover {
-	color: #1563b1;
+	color: #177add;
 }
 
 .team .member .social i {
@@ -2121,7 +2124,7 @@ section {
 
 .contact .info i {
 	font-size: 20px;
-	color: #1563b1;
+	color: #177add;
 	float: left;
 	width: 44px;
 	height: 44px;
@@ -2156,7 +2159,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-	background: #1563b1;
+	background: #177add;
 	color: #fff;
 }
 
@@ -2172,7 +2175,7 @@ section {
 .contact .php-email-form .error-message {
 	display: none;
 	color: #fff;
-	background: #1b76d1;
+	background: #177add;
 	text-align: left;
 	padding: 15px;
 	font-weight: 600;
@@ -2220,7 +2223,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-	border-color: #1563b1;
+	border-color: #177add;
 }
 
 .contact .php-email-form input {
@@ -2232,7 +2235,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-	background: #1563b1;
+	background: #177add;
 	border: 0;
 	padding: 10px 28px;
 	color: #fff;
@@ -2241,7 +2244,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-	background: #1b76d1;
+	background: #177add;
 }
 
 @-webkit-keyframes animate-loading {
@@ -2312,38 +2315,50 @@ section {
 .blog .entry {
 	padding: 30px;
 	margin-bottom: 60px;
-	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+	/* box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1); */
 }
 
 .blog .entry .entry-img {
-	max-height: 440px;
-	margin: -30px -30px 20px -30px;
+	max-width:100%;
+	max-height:100%;
+	/* margin: -30px -30px 20px -30px; */
+	margin-bottom:30px;
 	overflow: hidden;
 }
 
 /* project title 1 */
-.blog .entry .entry-heada {
+.blog .entry .title1 {
 	text-align: left;
 	font-size: 40px;
-	font-weight: bolder;
+	font-weight: 630;
 	padding: 0;
-	margin: 0 0 10px 0;
-	/* font-family: "Times New Roman", Times, serif; */
-	font-family: "Mukta", sans-serif;
-	letter-spacing: 2px;
-	color: #3b3b3b;
+	margin: 100px 0 20px 0;
+	font-family: "Amiko", sans-serif;
+	letter-spacing: 0px;
+	color: #177add;
 }
 
-/* project title 2 */
-.blog .entry .entry-heada2 {
+.blog .entry .subtitle1 {
 	text-align: left;
-	line-height: 23px;
-	font-size: 17px;
+	width:60%;
+	font-size: 14px;
 	font-weight: light;
 	padding: 0;
-	margin: 0 0 50px 0;
-	color: #3b3b3b;
-	/* font-family: Arial, Helvetica, sans-serif; */
+	margin: 15px 0 20px 0;
+	color: #a0a0a0;
+	font-family: "Work Sans", sans-serif;
+	letter-spacing:1px;
+}
+
+.blog .entry .subtitle2 {
+	text-align: left;
+	width: 100%;
+	line-height: 25px;
+	font-size: 17px;
+	font-weight:normal;
+	padding: 0;
+	margin: 15px 0 50px 0;
+	color: #000000;
 	font-family: "Work Sans", sans-serif;
 }
 
@@ -2352,7 +2367,7 @@ section {
 	font-size: 28px;
 	font-weight: bold;
 	padding: 0;
-	margin: 0 0 20px 0;
+	margin: 0 0 0px 0;
 }
 
 .blog .entry .entry-title a {
@@ -2366,7 +2381,7 @@ section {
 
 .blog .entry .entry-meta {
 	margin-bottom: 15px;
-	color: #1973cc;
+	color: #177add;
 }
 
 .blog .entry .entry-meta ul {
@@ -2389,7 +2404,7 @@ section {
 }
 
 .blog .entry .entry-meta a {
-	color: #1973cc;
+	color: #177add;
 	font-size: 14px;
 	display: inline-block;
 	line-height: 1;
@@ -2401,6 +2416,28 @@ section {
 	font-family: "Work Sans", sans-serif;
 }
 
+/* proj details (i.e. role, duration, etc.) */ 
+
+/* prev / next links at bottom of case study page */
+.next-prev-container {
+	max-height:100%;
+	max-width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+.next-prev-link {
+	font-size: 15px;
+	font-family: "Work Sans", sans-serif;
+	font-weight: 500;
+	color: #177add;
+	transition: 0.3s;
+}
+
+.next-prev-link:hover {
+	color: #4fa7ff;
+}
+
 .blog .entry .entry-content .read-more {
 	-moz-text-align-last: right;
 	text-align-last: right;
@@ -2408,7 +2445,7 @@ section {
 
 .blog .entry .entry-content .read-more a {
 	display: inline-block;
-	background: #1563b1;
+	background: #177add;
 	color: #fff;
 	padding: 6px 20px;
 	/* transition: 0.3s; */
@@ -2417,7 +2454,7 @@ section {
 }
 
 .blog .entry .entry-content .read-more a:hover {
-	background: #1b76d1;
+	background: #177add;
 }
 
 .blog .entry .entry-content h3 {
@@ -2472,7 +2509,7 @@ section {
 }
 
 .blog .entry .entry-footer a:hover {
-	color: #1563b1;
+	color: #177add;
 }
 
 .blog .entry .entry-footer .cats {
@@ -2581,7 +2618,7 @@ section {
 }
 
 .blog .blog-comments .comment h5 a:hover {
-	color: #1563b1;
+	color: #177add;
 }
 
 .blog .blog-comments .comment h5 .reply {
@@ -2682,7 +2719,7 @@ section {
 
 .blog .blog-pagination li.active,
 .blog .blog-pagination li:hover {
-	background: #1563b1;
+	background: #177add;
 }
 
 .blog .blog-pagination li.active a,
@@ -2733,7 +2770,7 @@ section {
 	font-size: 16px;
 	padding: 0 15px;
 	margin: -1px;
-	background: #1563b1;
+	background: #177add;
 	color: #fff;
 	transition: 0.3s;
 	border-radius: 0 4px 4px 0;
@@ -2745,7 +2782,7 @@ section {
 }
 
 .blog .sidebar .search-form form button:hover {
-	background: #1b76d1;
+	background: #177add;
 }
 
 .blog .sidebar .categories ul {
@@ -2793,7 +2830,7 @@ section {
 }
 
 .blog .sidebar .recent-posts h4 a:hover {
-	color: #1563b1;
+	color: #177add;
 }
 
 .blog .sidebar .recent-posts time {
@@ -2829,8 +2866,8 @@ section {
 
 .blog .sidebar .tags ul a:hover {
 	color: #fff;
-	border: 1px solid #1563b1;
-	background: #1563b1;
+	border: 1px solid #177add;
+	background: #177add;
 }
 
 .blog .sidebar .tags ul a span {
@@ -2916,7 +2953,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
 	padding-right: 2px;
-	color: #1b76d1;
+	color: #177add;
 	font-size: 18px;
 	line-height: 1;
 }
@@ -2940,7 +2977,7 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
 	text-decoration: none;
-	color: #1563b1;
+	color: #177add;
 }
 
 #footer .footer-newsletter {
@@ -2980,7 +3017,7 @@ section {
 	background: none;
 	font-size: 15px;
 	padding: 0 22px;
-	background: #1563b1;
+	background: #177add;
 	color: #fff;
 	transition: 0.3s;
 	border-radius: 50px;
@@ -2988,7 +3025,7 @@ section {
 }
 
 #footer .footer-newsletter form input[type="submit"]:hover {
-	background: #1b76d1;
+	background: #177add;
 }
 
 #footer .credits {
@@ -3000,7 +3037,7 @@ section {
 #footer .social-links a {
 	font-size: 18px;
 	display: inline-block;
-	background: #1563b1;
+	background: #177add;
 	color: #fff;
 	line-height: 1;
 	padding: 8px 0;
@@ -3013,7 +3050,7 @@ section {
 }
 
 #footer .social-links a:hover {
-	background: #1b76d1;
+	background: #177add;
 	color: #fff;
 	text-decoration: none;
 }
