--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2474,7 +2474,7 @@ section {
 
 .blog .entry .entry-content h3 {
 	font-size: 25px;
-	margin-top: 100px;
+	margin-top: 60px;
 	margin-bottom:20px;
 	font-weight: 630;
 	letter-spacing:1px;
@@ -2484,10 +2484,8 @@ section {
 /* 	float:right;
 	width:50%; 
 	font-size: 20px;
-	margin-left: 55%;
-	margin-bottom:20px;	 */
-	text-align:center;
-	font-size: 1em;
+	margin-left: 55%; */
+	font-size: 100%;
 	line-height: 2em;
 	color: #000000;
 	font-weight:500;
