--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2436,7 +2436,7 @@ section {
 .next-prev-container {
 	max-height:100%;
 	max-width: 100%;
-	margin-top:200px;
+	margin-top:100px;
 	display: flex;
 	justify-content: center;
 }
@@ -2822,7 +2822,7 @@ body {
 	--bs-gutter-y: 0;
 	display: flex;
 	flex-wrap: wrap;
-	padding-bottom:5vh;
+	padding-bottom:10%;
 }
 
 .section-container .columns {
