--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,6 +496,8 @@ h6 {
 	display: block;
 }
 
+
+
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
@@ -556,15 +558,13 @@ h6 {
 /* home page title 1 */
 #hero h1 {
 	/* font-family: "Nunito", sans-serif; */
-	width: 200%;
-	font-family: "Amiko", sans-serif;
-	margin: 0 0 10px 200px;
-	/* margin-top: 170px; */
-	margin-bottom: 20px;
-	font-size: 33px;
-	font-weight: 600;
-	line-height: 45px;
-	letter-spacing: 3px;
+	width: 100%;
+	font-family: "Work Sans", sans-serif;
+	text-align:center;
+	margin-top: 140px;
+	font-size: 35px;
+	font-weight: 550;
+	letter-spacing: 1px;
 	text-transform: none;
 	color: #177add;
 	/* color: #1563b1; #1c87eb; #69c5cc; */
@@ -574,13 +574,13 @@ h6 {
 	max-width: 500px;
 	font-family: "Inter", serif; /* home page description font */
 	color: #a0a0a0;
-	line-height: 35px;
+	text-align: center;
+	line-height: 2em;
 	letter-spacing: 0.5px;
-	margin: 150px  10px 0;
+	margin-top:20px;
 	margin-bottom: 25px;
 	font-size: 1em; /*17px*/
 	font-weight: 300;
-	box-sizing: border-box;
 }
 
 #hero h3 {
@@ -630,8 +630,11 @@ h6 {
 	overflow: hidden;
 }
 
-/* for text rotater */
-span {
+/* for text rotater 
+open this comment again if you want to add a rotating header 
+on home page 
+*/
+/* span {
 	display: block;
 	height: 100%;
 	padding-left: 10px;
@@ -639,6 +642,9 @@ span {
 	animation: spin_words 15s infinite;
 }
 
+
+
+ */
 /* for copyright label */
 /* span {
 	display: block;
@@ -825,6 +831,9 @@ span {
 
 /* END OF ROTATE */
 
+
+
+
 #hero .btn-get-started {
 	/* font-family: "Poppins", sans-serif; */
 	font-family: "Inter", sans-serif;
@@ -871,6 +880,13 @@ span {
 		height: 150vh;
 	}
 }
+
+
+/* =================================
+            IMAGE SLIDER 
+   =================================
+*/
+
 
 /*--------------------------------------------------------------
 # Sections General
@@ -1739,11 +1755,14 @@ section {
 }
 
 .portfolio-details .portfolio-details-slider img {
-	width: 100%;
+	max-width: 100%;
+	/* border: 3px solid #177add; */
+
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination {
-	margin-top: 0px;
+	margin-top:20px;
+	margin-bottom:-10px;
 	position: relative;
 }
 
@@ -2343,7 +2362,6 @@ section {
 	padding: 0;
 	margin: 50px 0 15px 0;
 	font-family: "Work Sans", sans-serif;
-	letter-spacing: px;
 	color: #177add;
 }
 
@@ -3063,8 +3081,3 @@ body {
 	color: #fff;
 	text-decoration: none;
 }
-
-/* =================================
-               ROTATE
-   =================================
-*/
