--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1556,13 +1556,14 @@ section {
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background: #00000088; /* portfolio img hover */
+	background: #00000073; /* portfolio img hover */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	opacity: 0;
 	transition: 0.3s;
+	border-radius:10px;
 }
 
 .portfolio .image_overlay > * {
@@ -1607,16 +1608,16 @@ section {
 }
 
 .portfolio .image_title {
-	max-width:50%;
-	font-size:1.3em;
+	max-width:70%;
+	font-size:1.6em;
 	font-family: "Work Sans", sans-serif;
 	margin-top:20px;
-	margin-bottom:5px;
+	margin-bottom:15px;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
 	letter-spacing:0.5px;
-	font-weight: 450;
+	font-weight: 500;
 	color: #ffffff;
 
 }
@@ -1670,7 +1671,7 @@ section {
 	text-align: center;
 	max-width:70%;
 	font-family: "Inter", sans-serif;
-	color: #ffffffb2;
+	color: #ffffffb8;
 	margin-top: 3px;
 	letter-spacing: 2px;
 	font-weight:300;
