--- a/assets/css/construction.css
+++ b/assets/css/construction.css
@@ -194,16 +194,17 @@ h6 {
 
 #header .logo {
 	/* not the IRENE LUE logo */
-	font-family: "Mukta", sans-serif;
-	color: #ffffff;
-	font-size: 18px;
+	/* IRENE LUE logo */
+	font-family: "Amiko", sans-serif;
+	color: #3b3b3b;
+	font-size: 16px;
+	font-weight: 600;
 	padding: 0 4px;
 	white-space: nowrap;
 	margin: 0;
 	padding: 0;
 	line-height: 1;
-	font-weight: 450;
-	letter-spacing: 2px;
+	letter-spacing: 0px;
 	text-transform: None;
 }
 
@@ -260,7 +261,7 @@ h6 {
 	/* Home, Work, About links */
 	font-family: "Amiko", sans-serif;
 	color: #ffffff;
-	font-size: 14px;
+	font-size: 13px;
 	padding: 0 4px;
 	padding-top: 10px;
 	white-space: nowrap;
