--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,7 +196,7 @@ h6 {
 	/* IRENE LUE logo */
 	font-family: "Amiko", sans-serif;
 	color: #3b3b3b;
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: 600;
 	padding: 0 4px;
 	white-space: nowrap;
@@ -261,7 +261,7 @@ h6 {
 	/* Home, Work, About links */
 	font-family: "Amiko", sans-serif;
 	color: #3b3b3b;
-	font-size: 14px;
+	font-size: 13px;
 	font-weight: 600;
 	padding: 0 4px;
 	padding-top: 10px;
@@ -583,14 +583,14 @@ h6 {
 	letter-spacing: 0.5px;
 	margin-top:20px;
 	margin-bottom: 25px;
-	font-size: 1em; /*17px*/
+	font-size: 15px; /*17px*/
 	font-weight: 300;
 }
 
 #hero h3 {
 	/* font-family: "Nunito", sans-serif; */
 	max-width: 550px;
-	font-family: "Work Sans", sans-serif;
+	font-family: "Inter", sans-serif;
 	text-align: left;
 	margin-top:10px;
 	margin-right:auto;
@@ -599,18 +599,36 @@ h6 {
 	letter-spacing: 0px;
 	line-height:30px;
 	text-transform: none;
-	color: #a1a1a1;
+	color: #a8a8a8;
 	display: inline-block;
 
 	/* color: #1563b1; #1c87eb; #69c5cc; */
 }
 
-#hero .button-container header-buttons {
-	float: center;
+#hero .button-box {
+	text-align:center; 
+	width:20%; 
+	border-radius:10px;
+	background:#fff;
+	border:2px solid #177add;	
+	color: rgb(0, 0, 0);
+	padding: 10px 0px 10px 0px;
+	margin-top:10px;
 	text-align: center;
-	border-radius: 10px;
-	width: 10%;
-	border: 1.5px solid #177add;
+	justify-content: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 13px;
+	font-family: "Inter", sans-serif;
+	font-weight:500;
+	letter-spacing:0px;
+}
+
+
+#hero .button-box:hover {
+	color: #ffffff;
+	background: #177add;
+	transition: 0.3s;
 }
 
 /* ROTATE */
@@ -1027,12 +1045,12 @@ section {
 	max-width: 50vw;
 	height: auto;
 	width: 100%;
-	margin-top: 10px;
+	margin-top: 13px;
 	margin-bottom: 35px;
 	/* font-family: "Mukta", sans-serif; */
-	font-family: "Amiko", sans-serif;
-	font-size: 1.5em;
-	font-weight: bold;
+	font-family: "Work Sans", sans-serif;
+	font-size: 35px;
+	font-weight: 600;
 	letter-spacing: 1px;
 	width: 80%;
 	color: #177add;
@@ -1061,14 +1079,13 @@ section {
 }
 
 .about-paragraph2 {
-	font-family: "Work Sans", sans-serif;
+	font-family: "Inter", sans-serif;
 	font-size: 17px;
-	line-height: 200%;
+	line-height: 35px;
 	padding-bottom: 15px;
 	color: #3b3b3b;
 	max-width: 100%;
 	height: auto;
-	width: 100%;
 }
 
 .about-link {
@@ -1629,10 +1646,10 @@ section {
 }
 
 .portfolio .image_title {
-	max-width:50%;
+	max-width:100%;
 	font-size:1.6em;
 	font-family: "Work Sans", sans-serif;
-	margin-top:20px;
+	margin-top:25px;
 	margin-bottom:15px;
 	justify-content: center;
 	align-items: center;
@@ -1690,12 +1707,12 @@ section {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	max-width:70%;
+	max-width:50%;
 	font-family: "Inter", sans-serif;
-	color: #ffffffb8;
+	color: #ffffffc1;
 	margin-top: 3px;
 	letter-spacing: 2px;
-	font-weight:300;
+	font-weight:450;
 }
 
 /* end */
