--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2906,10 +2906,26 @@ body {
 	--bs-gutter-y: 0;
 	display: flex;
 	flex-wrap: wrap;
-	padding-bottom:10%;
+	padding-bottom:10%; /*before: 10%*/
+}
+
+/* without the 10% padding*/
+.section-container2 {
+	--bs-gutter-x: 1.5rem;
+	--bs-gutter-y: 0;
+	display: flex;
+	flex-wrap: wrap;
+	padding-left:0px;
+	padding-top:0%;
+	padding-bottom: 5%;
 }
 
 .section-container .columns {
+	flex: 0 0 auto;
+	width: 50%;
+}
+
+.section-container2 .columns {
 	flex: 0 0 auto;
 	width: 50%;
 }
@@ -2921,8 +2937,19 @@ body {
 	background-size: cover;
 }
 
+.section-container2 .columns.image {
+	/* 	object-fit:cover; */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 .section-container .columns.content .content-container {
 	padding: 40px 50px;
+}
+
+.section-container2 .columns.content .content-container {
+	padding: 0px 30px;
 }
 
 .section-container .columns.content .content-container h5 {
@@ -2942,12 +2969,31 @@ body {
 
 }
 
+.section-container2 .columns.content .content-container p {
+	font-family: "Inter", sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	padding-top:15px;
+	margin-bottom: 0px;
+}
+
 @media screen and (max-width:767px) {
 	.section-container {
 		flex-flow: row wrap;
 	}
 
+	.section-container2 {
+		flex-flow: row wrap;
+	}
+
 	.section-container .columns.image {
+		display: block;
+		order: 1;
+		width: 100%;
+		height: 250px;
+	}
+
+	.section-container2 .columns.image {
 		display: block;
 		order: 1;
 		width: 100%;
@@ -2960,7 +3006,17 @@ body {
 		width: 100%;
 	}
 
+	.section-container2 .columns.content {
+		display: block;
+		order: 2;
+		width: 100%;
+	}
+
 	.section-container .columns.content .content-container {
+		padding: 20px 35px;
+	}
+
+	.section-container2 .columns.content .content-container {
 		padding: 20px 35px;
 	}
 
