--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1600,7 +1600,7 @@ section {
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background: #00000073; /* portfolio img hover */
+	background: #105498; /* portfolio img hover #00000073; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
