--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1600,7 +1600,7 @@ section {
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background: #105498; /* portfolio img hover #00000073; */
+	background: #ffffff; /* portfolio img hover 3587da #00000073; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -1662,7 +1662,7 @@ section {
 	text-align: center;
 	letter-spacing:0.5px;
 	font-weight: 500;
-	color: #ffffff;
+	color: #177add;
 
 }
 
@@ -1715,7 +1715,7 @@ section {
 	text-align: center;
 	max-width:50%;
 	font-family: "Inter", sans-serif;
-	color: #ffffffc1;
+	color: #0000003e;
 	margin-top: 3px;
 	letter-spacing: 2px;
 	font-weight:450;
