--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1610,7 +1610,29 @@ section {
 	border-radius:10px;
 }
 
+.portfolio .image_overlay2 {
+	position: absolute;
+	top: 0;
+	left: 0%;
+	width: 100%;
+	height: 100%;
+	background: #00000073;
+	/* portfolio img hover 3587da #00000073; */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	opacity: 0;
+	transition: 0.3s;
+	border-radius: 10px;
+}
+
 .portfolio .image_overlay > * {
+	/* 	transform: translateY(8px);
+	transition: transform 0.3s; */
+}
+
+.portfolio .image_overlay2>* {
 	/* 	transform: translateY(8px);
 	transition: transform 0.3s; */
 }
@@ -1619,7 +1641,15 @@ section {
 	opacity: 1;
 }
 
+.portfolio .image_overlay2:hover {
+	opacity: 1;
+}
+
 .portfolio .image_overlay:hover > * {
+	transform: translateY(0);
+}
+
+.portfolio .image_overlay2:hover>* {
 	transform: translateY(0);
 }
 
