--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1683,7 +1683,7 @@ section {
 
 .portfolio .image_title {
 	max-width:100%;
-	font-size:1.6em;
+	font-size:2vw;
 	font-family: "Work Sans", sans-serif;
 	margin-top:25px;
 	margin-bottom:15px;
@@ -1739,11 +1739,11 @@ section {
 }
 
 .portfolio .image_description {
-	font-size: 0.9em;
+	font-size: 1vw;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	max-width:50%;
+	width:90%;
 	font-family: "Inter", sans-serif;
 	color: #0000003e;
 	margin-top: 3px;
@@ -1758,6 +1758,7 @@ section {
 	margin-right: auto;
 	margin-bottom: 30px;
 	overflow: hidden;
+	width:50%;
 }
 
 .portfolio .portfolio-item img {
