fixed results page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2991,7 +2991,7 @@ body {
 }
 
 .section-container2 .columns.content .content-container {
-	padding: 0px 50px;
+	padding: 0px 0px;
 }
 
 .section-container .columns.content .content-container h5 {
@@ -3008,7 +3008,7 @@ body {
 	line-height: 35px;
 	font-size: 20px;
 	width: 85%;
-	margin-right: auto;
+	margin-right: 0px;
 	margin-left: auto;
 	
 }
@@ -3071,6 +3071,7 @@ body {
 
 	.section-container2 .columns.content .content-container {
 		padding: 20px 35px;
+		/* padding: 20px 35px; */
 	}
 
 	.section-container .columns.content .content-container h5 {
