--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1600,7 +1600,7 @@ section {
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background: #ffffff; /* portfolio img hover 3587da #00000073; */
+	background: #ffffffbb; /* portfolio img hover 3587da #00000073; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -1627,12 +1627,34 @@ section {
 	border-radius: 10px;
 }
 
+.portfolio .image_overlay3 {
+	position: absolute;
+	top: 0;
+	left: 0%;
+	width: 100%;
+	height: 100%;
+	background: #E5F3FE;
+	/* portfolio img hover 3587da #00000073; */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	opacity: 0;
+	transition: 0.3s;
+	border-radius: 10px;
+}
+
 .portfolio .image_overlay > * {
 	/* 	transform: translateY(8px);
 	transition: transform 0.3s; */
 }
 
 .portfolio .image_overlay2>* {
+	/* 	transform: translateY(8px);
+	transition: transform 0.3s; */
+}
+
+.portfolio .image_overlay3>* {
 	/* 	transform: translateY(8px);
 	transition: transform 0.3s; */
 }
@@ -1645,11 +1667,19 @@ section {
 	opacity: 1;
 }
 
+.portfolio .image_overlay3:hover {
+	opacity: 1;
+}
+
 .portfolio .image_overlay:hover > * {
 	transform: translateY(0);
 }
 
 .portfolio .image_overlay2:hover>* {
+	transform: translateY(0);
+}
+
+.portfolio .image_overlay3:hover>* {
 	transform: translateY(0);
 }
 
@@ -1683,7 +1713,7 @@ section {
 
 .portfolio .image_title {
 	max-width:100%;
-	font-size:2vw;
+	font-size:2.2vw;
 	font-family: "Work Sans", sans-serif;
 	margin-top:25px;
 	margin-bottom:15px;
@@ -1692,7 +1722,7 @@ section {
 	text-align: center;
 	letter-spacing:0.5px;
 	font-weight: 500;
-	color: #177add;
+	color: #ffffff;
 
 }
 
@@ -1745,7 +1775,7 @@ section {
 	text-align: center;
 	width:90%;
 	font-family: "Inter", sans-serif;
-	color: #0000003e;
+	color: #ffffff87;
 	margin-top: 3px;
 	letter-spacing: 2px;
 	font-weight:450;
